tests/integration/fail/string_interpolation_number.ncl
# test = 'error'
#
# [metadata]
# error = 'EvalError::TypeError'
"bad type %{1 + 1}"